Fix drink-container flex wrap

--- a/src/index.css
+++ b/src/index.css
@@ -44,5 +44,7 @@ a:hover {
 }
 
 .drinks-container {
+  display: flex;
+  flex-wrap: wrap;
   margin: 1em;
 }
